--- a/test_terminal/test_terminal.vcxproj.filters
+++ b/test_terminal/test_terminal.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClInclude Include="Connect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Credentials.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
